24w36a update - removes armor behaviour - removes fastfood property from legacy food behaviour - optional itemResource for decoration configs, model field still exists - Fixes Lock animation - Fixes waterlogging issues with simple decorations