@@ -9,6 +9,7 @@ import it.unimi.dsi.fastutil.objects.ObjectArrayList;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.InteractionResult;
+import net.minecraft.world.entity.EntitySpawnReason;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.Vec3;
 import org.jetbrains.annotations.NotNull;
@@ -34,7 +35,7 @@ public class Seat implements DecorationBehaviour<Seat.SeatConfig> {
 
     @Override
     public InteractionResult interact(ServerPlayer player, InteractionHand hand, Vec3 location, DecorationBlockEntity decorationBlockEntity) {
-        if (!player.isSecondaryUseActive() && decorationBlockEntity.getDecorationHolder() instanceof DecorationHolder decorationHolder) {
+        if (!player.isSecondaryUseActive() && decorationBlockEntity.getDecorationHolder() instanceof DecorationHolder) {
             Seat.SeatMeta seat = this.getClosestSeat(decorationBlockEntity, location);
 
             if (seat != null && !this.hasSeatedPlayer(decorationBlockEntity, seat)) {
@@ -48,7 +49,8 @@ public class Seat implements DecorationBehaviour<Seat.SeatConfig> {
     }
 
     public void seatPlayer(DecorationBlockEntity decorationBlockEntity, Seat.SeatMeta seat, ServerPlayer player) {
-        SeatEntity seatEntity = EntityRegistry.SEAT_ENTITY.create(player.level());
+        SeatEntity seatEntity = EntityRegistry.SEAT_ENTITY.create(player.serverLevel(), EntitySpawnReason.TRIGGERED);
+        assert seatEntity != null;
         seatEntity.setPos(this.seatTranslation(decorationBlockEntity, seat).add(decorationBlockEntity.getDecorationHolder().getPos()));
         player.level().addFreshEntity(seatEntity);
         player.startRiding(seatEntity);
@@ -61,7 +63,7 @@ public class Seat implements DecorationBehaviour<Seat.SeatConfig> {
 
     public Seat.SeatMeta getClosestSeat(DecorationBlockEntity decorationBlockEntity, Vec3 location) {
         if (seatConfig.size() == 1) {
-            return seatConfig.get(0);
+            return seatConfig.getFirst();
         }
         else {
             double dist = Double.MAX_VALUE;
